# RoVi_RoboticsAndVision_Project2022

./: README.md
 Miscellaneous/: codeExecution.rtf
Matlab/: FinalM3Performance.mlx  FinalPathPlots.mlx
Matlab/experiment/P2P_Firstplace/: JointsData.txt  TFData.txt  liTimeData.txt
Matlab/experiment/P2P_Secondplace/: JointsData.txt  TFData.txt  liTimeData.txt
Matlab/experiment/P2P_Thirdplace/: JointsData.txt  TFData.txt  liTimeData.txt
Matlab/vision_M3_test/: M3PerforamanceSTD0.txt  M3PerformaceTimeSTD0.txt  M3PerformanceTime.txt  M3realMesurements.txt
Plugin/DenseStereo/image/: bottle_Left.ppm  bottle_Right.ppm  scene_Left.ppm  scene_Right.ppm
Plugin/DenseStereo/src/: CMakeLists.txt  denseStereo.cpp  denseStereo.hpp  globalePose.cpp  localPose.cpp  main.cpp  preprocessing.cpp
Plugin/DinoSparseStereo/src/: CMakeLists.txt  dinoSparseStereo.cpp  dinoSparseStereo.hpp  main.cpp
Plugin/RRT/: CMakeLists.txt  RRT.cpp
Plugin/RRT/dataPythonCode/: makePlotsRRT.py  stepSize_vs_generationTime1.txt  stepSize_vs_generationTime2.txt  stepSize_vs_generationTime3.txt  stepSize_vs_pathSize1.txt  stepSize_vs_pathSize2.txt  stepSize_vs_pathSize3.txt
Plugin/SamplePlugin/: CMakeLists.txt
Plugin/SamplePlugin/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
Plugin/SparseStereo/data/: data_30_vision_ball
Plugin/SparseStereo/src/: CMakeLists.txt  main.cpp  performanceEstimation  sparseStereo.cpp  sparseStereo.hpp
Plugin/WorkCell/: Scene.wc.xml  assimp_log.txt  rwsettings.xml
Plugin/WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml  UR6855A_light.dwc.xml  UR6855A_light.wc.xml
Plugin/WorkCell/parts/: Bigbox.3ds
Plugin/WorkCell/pathPlayback/: visuLin.rwplay
Plugin/WorkCell/table/: Sigmund_table.mtl
Plugin/WorkCellObstacle/: Scene.wc.xml  rwsettings.xml
Plugin/camereaImageMaker/src/: CMakeLists.txt  main.cpp
Plugin/reachabilityAnalysis/Experiments/stepsize_006/side/data/: left.txt  mid.txt  place.txt  right.txt
Plugin/reachabilityAnalysis/Experiments/stepsize_006/side/rwplays/left/: _position0_cylinder1.rwplay  _position100_cylinder1.rwplay  _position101_cylinder1.rwplay  _position102_cylinder1.rwplay  _position103_cylinder1.rwplay  _position104_cylinder1.rwplay  _position105_cylinder1.rwplay  _position106_cylinder1.rwplay  _position107_cylinder1.rwplay  _position108_cylinder1.rwplay  _position109_cylinder1.rwplay  _position10_cylinder1.rwplay  _position110_cylinder1.rwplay  _position111_cylinder1.rwplay  _position112_cylinder1.rwplay  _position113_cylinder1.rwplay  _position114_cylinder1.rwplay  _position115_cylinder1.rwplay  _position116_cylinder1.rwplay  _position117_cylinder1.rwplay  _position118_cylinder1.rwplay  _position119_cylinder1.rwplay  _position11_cylinder1.rwplay  _position120_cylinder1.rwplay  _position121_cylinder1.rwplay  _position122_cylinder1.rwplay  _position123_cylinder1.rwplay  _position124_cylinder1.rwplay  _position125_cylinder1.rwplay  _position127_cylinder1.rwplay  _position128_cylinder1.rwplay  _position129_cylinder1.rwplay  _position12_cylinder1.rwplay  _position130_cylinder1.rwplay  _position131_cylinder1.rwplay  _position132_cylinder1.rwplay  _position133_cylinder1.rwplay  _position134_cylinder1.rwplay  _position135_cylinder1.rwplay  _position136_cylinder1.rwplay  (+120 more)
Plugin/reachabilityAnalysis/Experiments/stepsize_006/side/rwplays/mid/: _position0_cylinder1.rwplay  _position100_cylinder1.rwplay  _position101_cylinder1.rwplay  _position102_cylinder1.rwplay  _position103_cylinder1.rwplay  _position104_cylinder1.rwplay  _position105_cylinder1.rwplay  _position106_cylinder1.rwplay  _position107_cylinder1.rwplay  _position108_cylinder1.rwplay  _position109_cylinder1.rwplay  _position10_cylinder1.rwplay  _position110_cylinder1.rwplay  _position111_cylinder1.rwplay  _position112_cylinder1.rwplay  _position113_cylinder1.rwplay  _position114_cylinder1.rwplay  _position115_cylinder1.rwplay  _position116_cylinder1.rwplay  _position117_cylinder1.rwplay  (+158 more)
Plugin/reachabilityAnalysis/Experiments/stepsize_006/top/data/: left.txt  right.txt
Plugin/reachabilityAnalysis/WorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml  assimp_log.txt  rwsettings.xml
Plugin/reachabilityAnalysis/WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml  setup.prox.xml
Plugin/reachabilityAnalysis/WorkCell/parts/: Cylinder.3ds  bigbox.stl
Plugin/reachabilityAnalysis/WorkCell/table/: Sigmund_table.mtl
Plugin/reachabilityAnalysis/src/: CMakeLists.txt  main.cpp  reachability.cpp  reachability.hpp
Plugin/robotics/: JointsData.txt  TFData.txt  liTimeData.txt  visu.rwplay
Plugin/robotics/WorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml
Plugin/robotics/WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
Plugin/robotics/WorkCell/parts/: Square.3ds  ball.stl  oldBall.stl
Plugin/robotics/WorkCell/table/: Sigmund_table.mtl
Plugin/robotics/WorkCell/wsg50/: wsg50.xml
Plugin/robotics/src/: CMakeLists.txt  main.cpp  robotics.cpp  robotics.hpp
(+946 files in other folders)
